         methods in the ClientResource class.
       - Optional authentication keep request in neutral state: neither
         authenticated neither unauthenticated.
         Reported by Bruno Harbulot.
       - Fixed RangeRepresentation which was incorrectly modifying the
         wrapped representation. Reported by David Fogel.
    - Misc
       - Updated Grizzly library to version 1.9.19.
       - Improved concurrency for TunnelFilter.AcceptReplacer. 
         Contributed by Tim Peierls.
       - Clarified Javadocs of Context#getServerDispatcher().
         Suggested by Alex Milowski.

- 2.0.0 (2010-07-19)
    - API changes
      - When an annotated method manually sets the response entity, if 
        this entity is available then it will be preserved and the 
        result of the annotated method ignored. 
        Suggested by David Fogel.
      - Added missing JaasUtils#doAsPriviledged(..) methods.
        Contributed by Bruno Harbulot.
      - Added Encoder#getSupportedEncodings() method to allow 
        customization.
      - Added WadlApplication#createHtmlRepresentation(ApplicationInfo) 
        to allow for customization of HTML representation.
      - WadlApplication#getApplicationInfo and #wadlRepresent methods are 
        now protected instead of public.
      - WadlApplication#title property is now deprecated. Use the common
        Application#name and #description property instead which are now
        used by default.
      - Renamed "htmlConvert.xsl" file into "wadl2html.xslt" in WADL
        extension JAR.
      - Added static ResourceInfo#describe(ResourceInfo, Object, String)
        method in WADL extension to factorize logic.
      - Status service now logs exceptions caughts.
      - Added static Method#sort(List<Method>) method.
      - Renamed WadlServerResource#title into "name" property and added
        "description" property.
      - Added WadlServerResource#createWadlRepresentation(...) and