@@ -16,6 +16,7 @@ Import-Package: javax.servlet,
  org.restlet.engine.http,
  org.restlet.engine.http.adapter,
  org.restlet.engine.http.header,
+ org.restlet.engine.http.io,
  org.restlet.engine.local,
  org.restlet.engine.security,
  org.restlet.engine.util,
