@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-Integration with Spring framework @minor-version@.
+Integration with Spring Framework @minor-version@.
 
 @since Restlet 1.0
 @see <a href="@home-uri@">Spring Framework</a>
