@@ -34,7 +34,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 
-import org.restlet.engine.http.io.KeepAliveOutputStream;
+import org.restlet.engine.http.io.UnclosableOutputStream;
 import org.restlet.test.RestletTestCase;
 
 
@@ -43,7 +43,7 @@ import org.restlet.test.RestletTestCase;
  * 
  * @author Kevin Conaway
  */
-public class KeepAliveOutputStreamTestCase extends RestletTestCase {
+public class UnclosableOutputStreamTestCase extends RestletTestCase {
 
     static class MockOutputStream extends OutputStream {
         boolean closed = false;
@@ -61,7 +61,7 @@ public class KeepAliveOutputStreamTestCase extends RestletTestCase {
 
     public void testClose() throws IOException {
         final MockOutputStream stream = new MockOutputStream();
-        final OutputStream out = new KeepAliveOutputStream(stream);
+        final OutputStream out = new UnclosableOutputStream(stream);
         out.close();
 
         assertFalse(stream.closed);
@@ -71,7 +71,7 @@ public class KeepAliveOutputStreamTestCase extends RestletTestCase {
 
     public void testWrite() throws IOException {
         final ByteArrayOutputStream stream = new ByteArrayOutputStream();
-        final OutputStream out = new KeepAliveOutputStream(stream);
+        final OutputStream out = new UnclosableOutputStream(stream);
 
         out.write('a');
         assertEquals("a", new String(stream.toByteArray()));
